@@ -25,6 +25,8 @@ $GLOBALS['strOtherSettings']			= "Other settings";
 
 $GLOBALS['strWarning']				= "Warning";
 $GLOBALS['strFatalError']			= "A fatal error occurred";
+$GLOBALS['strUpdateError']			= "An error occured while updating";
+$GLOBALS['strUpdateDatabaseError']	= "Due to unknown reasons the update of the database structure wasn't succesful. The recommended way to proceed is to click <b>Retry updating</b> to try to correct these potential problems. If you are sure these errors won't affect the functionality of ".$phpAds_productname." you can click <b>Ignore errors</b> to continue. Ignoring these errors may cause serious problems and is not recommended!";
 $GLOBALS['strAlreadyInstalled']			= $phpAds_productname." is already installed on this system. If you want to configure it go to <a href='settings-index.php'>settings interface</a>";
 $GLOBALS['strCouldNotConnectToDB']		= "Could not connect to database, please recheck the settings you specified";
 $GLOBALS['strCreateTableTestFailed']		= "The user you specified doesn't have permission to create or update the database structure, please contact the database administrator.";
@@ -44,6 +46,8 @@ $GLOBALS['strWarningTrackVars']			= "The PHP configuration variable track_vars n
 $GLOBALS['strWarningPREG']				= "The version of PHP you are using doesn't have support for PERL compatible regular expressions. You need to enable the PREG extension before you can proceed.";
 $GLOBALS['strConfigLockedDetected']		= $phpAds_productname." has detected that your <b>config.inc.php</b> file is not writeable by the server.<br> You can't proceed until you change permissions on the file. <br>Read the supplied documentation if you don't know how to do that.";
 $GLOBALS['strCantUpdateDB']  			= "It is currently not possible to update the database. If you decide to proceed, all existing banners, statistics and advertisers will be deleted.";
+$GLOBALS['strIgnoreErrors']			= "Ignore errors";
+$GLOBALS['strRetryUpdate']			= "Retry updating";
 $GLOBALS['strTableNames']			= "Table Names";
 $GLOBALS['strTablesPrefix']			= "Table names prefix";
 $GLOBALS['strTablesType']			= "Table type";
