@@ -14,7 +14,7 @@ information in the 'Translation' forum on Sourceforge.
 Chinese (gb2312)
 	---------------------------------------------------------
 	Maintained by:	   Vincen Guo (guo9310@yahoo.com.cn)
-	Is up-to-date?	   Yes
+	Is up-to-date?	   No
 	Last update:	   12 January 2003
 	Translated files:  7
 	---------------------------------------------------------
@@ -35,7 +35,7 @@ English
 	---------------------------------------------------------
 	Maintained by:	   Niels Leenheer (niels@creatype.nl)
 	Is up-to-date?	   Always
-	Last update:	   12 Januari 2003
+	Last update:	   15 Januari 2003
 	Translated files:  7
 	---------------------------------------------------------
 
@@ -74,7 +74,7 @@ Hungarian
 Italian
 	---------------------------------------------------------
 	Maintained by:	   Matteo Beccati (matteo@beccati.com)
-	Is up-to-date?	   Yes
+	Is up-to-date?	   No
 	Last update:	   12 January 2003
 	Translated files:  7 + 3 resource files
 	---------------------------------------------------------
